# ai-robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: app_config.ini
include/: app_config.h  audio_capture.h  button_led.h  common_types.h  display.h  error_codes.h  font_renderer.h  http_client.h  state_machine.h  wifi_manager.h
libs/cJSON/: cJSON.c  cJSON.h
resources/: font_placeholder.txt
scripts/: run_voice_robot.sh  start_wifi.sh
src/: app_config.c  audio_capture.c  button_led.c  display.c  font_renderer.c  http_client.c  main.c  state_machine.c  wifi_manager.c
